#4.0 ~ #4.7 코드 챌린지 모범답안

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Vanilla Challenge</title>
+    <title>JS Casino</title>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="src/styles.css" />
   </head>
 
   <body>
     <h1>Random Number Game</h1>
-    <form class="generate-number">
-      <label>Generate a number between 0 and </label>
-      <input type="number" required />
-    </form>
-    <form class="guess-number">
-      <label>Guess the number</label>
-      <input type="number" required />
+    <div>
+      <h3 class="js-title">
+        Generate a number between 0 and <input id="maxNumber" type="number" />
+      </h3>
+    </div>
+    <form id="js-guess">
+      <label>Guess the number:</label>
+      <input type="number" max="200" min="5" />
       <button>Play!</button>
     </form>
-    <span class="chose"></span>
-    <span class="result"></span>
+    <div id="js-result">
+      <span></span>
+    </div>
     <script src="src/index.js"></script>
   </body>
 </html>
