--- a/challenge/index.html
+++ b/challenge/index.html
@@ -1,25 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JS Casino</title>
+    <title>Time Until Christmas Eve</title>
     <meta charset="UTF-8" />
   </head>
-
   <body>
-    <h1>Random Number Game</h1>
-    <div>
-      <h3 class="js-title">
-        Generate a number between 0 and <input id="maxNumber" type="number" />
-      </h3>
-    </div>
-    <form id="js-guess">
-      <label>Guess the number:</label>
-      <input type="number" max="200" min="5" />
-      <button>Play!</button>
-    </form>
-    <div id="js-result">
-      <span></span>
-    </div>
+    <h1>Time Until Christmas Eve</h1>
+    <h2 class="js-clock"></h2>
     <script src="src/index.js"></script>
   </body>
 </html>
