#5.0 ~ #5.3 코드챌린지 모범답안

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Time Until Christmas Eve</title>
+    <title>Parcel Sandbox</title>
     <meta charset="UTF-8" />
   </head>
   <body>
