--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             placeholder="What is your name?"
           />
         </form>
-        <h1 id="greeting" class="hidden" class="apple"></h1>
+        <h1 id="greeting" class="apple"></h1>
       </div>
 
       <div class="todo">
@@ -53,7 +53,7 @@
         </form>
       </div>
 
-      <div id="quote">
+      <div id="quote" class="low">
         <span></span>
         <span></span>
       </div>
@@ -62,6 +62,7 @@
     <div class="null-space"></div>
 
     <footer>
+      <span> Log Out</span>
       <span>Todo List</span>
       <div class="Alarm hidden">
         <span></span>
@@ -87,6 +88,8 @@
     <script src="js/today.js"></script>
     <script src="js/snow.js"></script>
     <script src="js/quotes.js"></script>
+    <script src="js/log-out.js"></script>
+
     <script src="js/greeting.js"></script>
   </body>
 </html>
